--- a/package.json
+++ b/package.json
@@ -44,17 +44,24 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.23.12",
+    "highlight.js": "^11.11.1",
     "input-otp": "1.4.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
+    "marked": "^16.1.2",
+    "marked-highlight": "^2.2.2",
     "mongoose": "^8.16.1",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "prismjs": "^1.30.0",
     "react": "^19",
     "react-ace": "latest",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "latest",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
@@ -63,8 +70,11 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/jszip": "^3.4.1",
+    "@types/marked": "^6.0.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
