--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "latest",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "ace-builds": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -52,6 +53,7 @@
     "marked": "^16.1.2",
     "marked-highlight": "^2.2.2",
     "mongoose": "^8.16.1",
+    "motion": "^12.23.24",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "prismjs": "^1.30.0",
@@ -64,6 +66,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
+    "streamdown": "^1.4.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "latest",
@@ -77,6 +80,7 @@
     "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "postcss": "^8.5",
